# palestine-list

./: README.md  index.html  pyproject.toml
docs/: index.md
search/: search_index.json
