[tool.poetry]
name = "palestine-list"
version = "0.1.0"
description = ""
authors = ["Paul Nabil Matthis <paulnm@gmail.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.5.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
